--- a/html-basic.html
+++ b/html-basic.html
@@ -6,7 +6,7 @@
   <title>html-basic</title>
 </head>
 <body>
-  <hgrounp class="top">
+  <hgrounp id="top">
     <h1>Lorem.</h1>
     <h2>Lorem ipsum.</h2>
     <h3>Lorem ipsum dolor.</h3>
