--- a/html-basic.html
+++ b/html-basic.html
@@ -28,8 +28,9 @@
 
   <div class="font">
     <marquee>飘飘~~~</marquee>
-    <p><i>这几种强调</i> <b>有什么</b> <strong>区别呢？</strong> <u>这个呢？</u> <em>这个呢？</em></p>
-    &lt;!-- &nbsp;i标签表示字体倾斜。  b标签只是表示字体加粗。 strong标签代表语义强调更深一层，非常重要。 u标签表示内容下加下划线。 em标签代表语义强调。 &nbsp;--&gt;<br>
+    <p><em这几种强调</em <b>有什么</b> <strong>区别呢？</strong> <u>这个呢？</u> <i>这个呢？</i></p>
+    &lt;!-- 这段注释要出现在页面里面 --&gt;<br>
+    <p>html中注释怎么写 &lt;!-- 用转义符 --&gt;</p>
     下面一段javascript代码，最合适用何种标签表示呢?<br>
     <pre>
       <code>
@@ -183,7 +184,7 @@
   <hr>  
 
   <div class="f">
-    <a href="https://www.mi.com/" target="fream">点击我在下面frame标签中打开小米官网，为什么打不开？</a>&lt;!--&nbsp;因为安全问题，ifraem标签内容可以被替代，利用浏览器漏洞造成用户安全问题。&nbsp;--&gt;<br>
+    <a href="https://www.mi.com/" target="fream">点击我在下面frame标签中打开小米官网，为什么打不开？</a><!-- 因为安全问题，ifraem标签内容可以被替代，利用浏览器漏洞造成用户安全问题。 -->
     <iframe src="https://nodejs.org/en/" name="fream"></iframe>
   </div>
   
