--- a/html-basic.html
+++ b/html-basic.html
@@ -28,7 +28,7 @@
 
   <div class="font">
     <marquee>飘飘~~~</marquee>
-    <p><em这几种强调</em <b>有什么</b> <strong>区别呢？</strong> <u>这个呢？</u> <i>这个呢？</i></p>
+    <p><em>这几种强调</em> <b>有什么</b> <strong>区别呢？</strong> <u>这个呢？</u> <i>这个呢？</i></p>
     &lt;!-- 这段注释要出现在页面里面 --&gt;<br>
     <p>html中注释怎么写 &lt;!-- 用转义符 --&gt;</p>
     下面一段javascript代码，最合适用何种标签表示呢?<br>
