--- a/html-basic.html
+++ b/html-basic.html
@@ -31,7 +31,7 @@
     <p><em>这几种强调</em> <b>有什么</b> <strong>区别呢？</strong> <u>这个呢？</u> <i>这个呢？</i></p>
     &lt;!-- 这段注释要出现在页面里面 --&gt;<br>
     <p>html中注释怎么写 &lt;!-- 用转义符 --&gt;</p>
-    下面一段javascript代码，最合适用何种标签表示呢?<br>
+    <p>下面一段javascript代码，最合适用何种标签表示呢?</p><br>
     <pre>
       <code>
         function a() {
@@ -41,11 +41,14 @@
     </pre>
   </div>
   <hr>
+
   <div class="list">
     <ul>
-      <li>小学
+      <li>
+        <span>小学</span>
         <ol>
-          <li>一年级
+          <li>
+            <span>一年级</span>
             <ol>
               <li>上学期</li>
               <li>下学期</li>
@@ -64,14 +67,16 @@
   <div class="description">
     <dl>
       <dt>班级</dt>
-        <dd>三年二班</dd>
+      <dd>三年二班</dd>
+
       <dt>老师</dt>
-        <dd>张老师</dd>
-        <dd>李老师</dd>
-        <dd>王老师</dd>
+      <dd>张老师</dd>
+      <dd>李老师</dd>
+      <dd>王老师</dd>
+
       <dt>学生</dt>
-        <dd>小明</dd>
-        <dd>豆豆</dd>
+      <dd>小明</dd>
+      <dd>豆豆</dd>
     </dl>
   </div>
 
@@ -81,6 +86,9 @@
     <form action="http://www.google.com" target=_blank>
       <input type="text" name="搜索" placeholder="请输入想要搜索的内容" value="">
       <input type="submit" value="在新窗口打开搜索结果" >
+      <label>  
+        <input type="checkbox" name="newwindow" id="" value="1">
+      </label> 
       </form>
       <hr>
   </div>
@@ -90,13 +98,16 @@
         <p>个人信息调查表</p>
         <dl>
           <dt>性别</dt>
-            <dd><input type="radio" name="gender" value="famale">男
-                <input type="radio" name="gender" value="male">女</dd>
+          <dd>
+            <label><input type="radio" name="gender" value="famale">男</label>    
+            <label><input type="radio" name="gender" value="male">女</label>
+            </dd>
           <dt>年龄</dt>
               <select name="age" id="">
+                <option selected hidden>请选择</option>
                 <optgroup label="少年">
                   <option value="1-6">1-6岁</option>
-                  <option value="6-12" selected>6-12岁</option>
+                  <option value="6-12">6-12岁</option>
                 </optgroup>
                 <optgroup label="青年">
                   <option value="13-15">13-15岁</option>
@@ -109,17 +120,24 @@
               </select>
           </dl>
           <dt>生日</dt>
-            <dd><input type="date" name=""></dd>
+          <dd><input type="date" name=""></dd>
+
           <dt>生辰</dt>
-            <dd><input type="time" name=""></dd>
+          <dd><input type="time" name=""></dd>
+
           <dt>照片</dt>
-            <dd><label for="picture" multiple>点我上传照片，我比文件上传按钮好看，还支持多选哦！</label>
-                <input type="file" hidden id="picture" accept="iamge/*"></dd>
+          <dd>
+            <label for="picture" multiple>点我上传照片，我比文件上传按钮好看，还支持多选哦！</label>
+            <input type="file" hidden id="picture" accept="iamge/*">
+          </dd>
+          
           <dt>肤色</dt>
-            <dd><input type="color" name=""></dd>
+          <dd><input type="color" name=""></dd>
+          
           <dt>自我介绍</dt>
-            <dd><textarea name="" row="50" cols="25">&lt;/textarea></textarea></dd>
+          <dd><textarea name="" row="50" cols="25">&lt;/textarea></textarea></dd>
         </dl>
+
       <fieldset disabled>
         <legend>这里面的全都禁用了</legend>
         <input type="text">
@@ -127,7 +145,7 @@
         <input type="text">
         <input type="text">
       </fieldset>
-      <input type="submit" name="" value="提交">
+      <button>提交</button> <!-- 默认值为submit --> 
       <input type="reset" name="" value="重置">
     </form>
   </div>
@@ -140,10 +158,12 @@
       </colgroup>
       <caption>货物信息</caption>
       <thead>
-        <th>编号</th>
-        <th>品名</th>
-        <th>进价</th>
-        <th>出价</th>
+        <tr>
+          <th>编号</th>
+          <th>品名</th>
+          <th>进价</th>
+          <th>出价</th>
+        </tr>
       </thead>
       <tbody>
       <tr>
