--- a/normal-flow-horizontal.html
+++ b/normal-flow-horizontal.html
@@ -29,6 +29,9 @@ section {
   margin: 12px;
   font-size: 30px;
   text-align: center; 
+  /*border: solid;*/
+  position: relative;
+  z-index: 8;
 }
 p {
   height: 150px;
@@ -36,8 +39,8 @@ p {
   margin: 0px;
 }
 p:hover {
-  margin-left: -30px;
-  margin-right: -30px;
+  margin-left: -100px;
+  margin-right: -100px;
   color: yellow;
   background: teal;
 }
