--- a/css-block-layout.html
+++ b/css-block-layout.html
@@ -6,9 +6,11 @@
   <title>css-block-layout</title>
 </head>
 <style>
+body {
+  margin-top: 0px;
+}
   .title {
   background: black;
-  margin-top: -8px;
 }
 
 .title p {
@@ -113,7 +115,7 @@
    <li>link</li>
  </ul>
   <div class="footer">
-    <p>&copy;版权所有<p>
+    <p>&copy;版权所有</p>
     <p>本页所有布局均使用块级元素</p>
   </div>
 </body>
