--- a/qq-mail.html
+++ b/qq-mail.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>qq-style</title>
+	<title>qq-mail-inline-block</title>
 	<style>
 		* {
 			box-sizing: border-box;
 			height: 100%;
-			width: 100%;
 		}
 
 		body {
@@ -17,7 +16,7 @@
 		header {
 			height: 80px;
 			background: grey;
-			border-bottom: 3px solid black;
+			border-bottom: 1px solid black;
 		}
 
 		div {
@@ -32,7 +31,7 @@
 		  	display: inline-block;
 		  	width: 160px;
 		  	background: pink;
-		  	border-right: 3px solid black;
+		  	border-right: 1px solid black;
           	vertical-align: top;
           	font-size: 16px;
           	overflow: auto;
@@ -56,10 +55,8 @@
 <header></header>
 <div>
 	<aside>
-	  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur recusandae qui, est atque quibusdam molestiae fuga eum quasi. Quos facere qui eligendi culpa, ea exercitationem harum minus vel. Doloribus excepturi, illum, perspiciatis unde natus ad quas possimus eligendi dolorum nulla aspernatur omnis corrupti numquam, cum libero molestias. Tenetur voluptas cum officiis rerum autem repellat tempore dicta ea unde voluptates nemo odit quae architecto sed qui quaerat recusandae, doloribus? Enim quis fugiat, architecto, non nobis odit. Possimus minus facere nobis, voluptates fugit voluptatum, officia. Consectetur explicabo minus dignissimos, error nihil odit enim, blanditiis illo, impedit numquam harum saepe perspiciatis facere sed.
 	</aside>
 	<main>
-	  
 	</main>
 </div>
 </body>
