--- a/css-menu.html
+++ b/css-menu.html
@@ -9,7 +9,14 @@
 	margin: 0px;
 	padding: 0px;
 }
-
+div {
+	height: 100%;
+	width: 100%;
+}
+section {
+	width: 1000px;
+	margin: auto;
+}
 header {
 	height: 45px;
 	background: #36373a;
@@ -75,7 +82,8 @@ ul ul ul:before {
 <body>
 	<header></header>
 	<div>
-		<ul class="a">
+		<section>
+			<ul class="a">
 			<li>首页
 				<ul class="b">
 					<li>手机
@@ -166,6 +174,8 @@ ul ul ul:before {
 				</ul>
 			</li>
 		</ul>
+		
+		</section>
 		
 	</div>
 </body>
