--- a/form-group.html
+++ b/form-group.html
@@ -5,29 +5,30 @@
   <meta name="viewport" content="width=device-width">
   <title>form-group</title>
   <style>
-  	.out {
-	border-collapse: separate;
-	background: pink;
-	display: table;
-}
-.a,
-.b {
-	display: table-cell;
-	background: grey;
-	white-space: nowrap;
-	width: 1%;
-}
-input {
-	display: table-cell;
-	width: 100%;
-}
+	.out {
+		width: 300px;
+		display: table;
+	}
+	.before,
+	.after {
+		display: table-cell;
+		background: #eee;
+		padding: 6px 12px;
+		white-space: nowrap;
+		width: 1%;
+	}
+	input {
+		display: table-cell;
+		width: 100%;
+		height: 30px;
+	}
   </style>
 </head>
 <body>
 <div class="out">
-	<div class="a">请输入</div>
-	<input type="text">
-	<div class="b">小米官网</div>
+	<div class="before">$</div>
+	<input type="text" placeholder="Amount">
+	<div class="after">.00</div>
 </div>
 </body>
 </html>
