--- a/mobike.html
+++ b/mobike.html
@@ -2,168 +2,7 @@
 <html>
 <head>
 	<title>mobike</title>
-	<link rel="stylesheet" type="text/css" href="mobike.css">
-	<style>
-			html,body {
-		height: 100%;
-
-	}
-	* {
-		margin: 0px;
-		padding: 0px;
-		text-decoration: none;
-	}
-	.topbar {
-		position: absolute;
-	}
-	.main {
-		height: 800px;
-		background-image: url('htttps://mobike.com/cn/assets/themes/moby/img/landing/hero-bg-3.jpghero-bg-7.jpg'); 
-		background-position: 54% 66%;
-		background-size: cover;
-
-	}
-	.pre-a,
-	.pre-b,
-	.pre-c,
-	.pre-d {
-		width: 25%;
-		min-height: 260px;
-		border-bottom: none;
-		background-size: cover;
-		float: left; 
-		background-position: center center;
-		box-sizing: border-box;
-		border: 1px solid #fff;
-		border-top: 2px solid #fff;
-	}
-	.pre-a {
-		background-image: url('htttps://mobike.com/cn/assets/themes/moby/img/promo-01.jpg');
-	}
-	.pre-b {
-		background-image: url('htttps://mobike.com/cn/assets/themes/moby/img/promo-02.jpg');
-	}
-	.pre-c {
-		background-image: url('htttps://mobike.com/cn/assets/themes/moby/img/promo-03.jpg');
-	}
-	.pre-d {
-		background-image: url('htttps://mobike.com/cn/assets/themes/moby/img/promo-04.jpg');
-	}
-
-	@media (max-width: 1080px) {
-		.pre-a,
-		.pre-b,
-		.pre-c,
-		.pre-d {
-			width: 50%;
-			background-position: center center;
-		}
-	}
-	@media (max-width: 640px) {
-		.pre-a,
-		.pre-b,
-		.pre-c,
-		.pre-d {
-			width: 100%;
-			background-position: center center;
-		}
-	}
-		
-	@media (max-width: 1920px) {
-		.main {
-			height: 790px;
-		}
-	}
-
-
-	@media (max-width: 1080px) {
-		 .main{
-			height: 600px;
-			background-size: cover;
-			background-position: 54% 66%;
-		}
-	}
-	
-/*	@media (max-height: 1050px){
-		.main{
-			height:600px; 
-	}
-
-	@media (min-height: 1079px) {
-		.main{
-			height: 800px;
-		}
-	}*/
-	.topbar {
-		width: 100%;
-	}
-	.topbar-header {
-		width: 1040px;
-		height: 80px;
-		padding: 20px;
-		margin: auto;
-	}
-	.topbar-logo {
-		float: left;
-		height: 56px;
-	}
-	.topbar-sider {
-		float: right;
-	}
-	.topbar-sider ul {
-		list-style: none;
-		/*width: 400px;*/
-		line-height: 22px;
-	}
-	.topbar-sider ul li {
-		float: left;
-		padding: 8px 20px;
-	}
-	.topbar-sider ul li a {
-		color: black;
-		text-align: center;
-	}
-	.main-content {
-		width: 1040px;
-		margin: auto;
-		height: 690px;
-		padding-top: 80px;
-	}
-	.content-theme {
-		font-size: 420%;
-	    font-weight: bold;
-	    line-height: 1;
-	    color: #fff;
-	    padding-top: 250px;
-	}
-	.main-link {
-		width: 300px;
-		line-height: 60px;
-		background: rgba(0, 0, 0, .6);
-		margin-top: 30px;
-		border-radius: 6px;
-	}
-	.main-link a {
-		font-size: 22px;
-		font-weight: bold;
-		padding: 14px 26px;
-		color: #fff;
-		letter-spacing: .1em;
-	}
-	.main-link:hover {
-		background: rgba(0,0,0,1)
-	}
-
-	.mb-pre ul li  span{
-		display: block;
-		font-size: 24px;
-		font-weight: 400;
-		color: #fff;
-		width: 100px;
-		margin: auto;
-		margin-top: 50px;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="mobike/mobike.css">
 </head>
 <body>
 	<div class="topbar">
